[gd_scene load_steps=4 format=3 uid="uid://gwq4kjh5810i"]

[ext_resource type="Script" path="res://scripts/gift.gd" id="1_pxn2a"]
[ext_resource type="Texture2D" uid="uid://cknkuovu1wxhr" path="res://assets/art/Presents/2x2Present.png" id="2_16slj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yypxn"]

[node name="Gift" type="Node2D"]
script = ExtResource("1_pxn2a")
size = Vector2i(2, 2)
texture = ExtResource("2_16slj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_yypxn")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
